--- a/kobayashi.rc
+++ b/kobayashi.rc
@@ -58,7 +58,7 @@ BEGIN
     GROUPBOX        "ファイル選択",IDC_STATIC,7,10,98,34
     PUSHBUTTON      "開く",IDC_BUTTON_OPEN1,13,21,26,18
     CONTROL         "読み込み完了",IDC_CHECK_DISPLAY1,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,44,23,60,14
-    DEFPUSHBUTTON   "表示",ID_OK,124,64,56,13
+    DEFPUSHBUTTON   "表示",ID_OK,128,62,56,13
     EDITTEXT        IDC_EDIT_H,46,108,40,12,ES_AUTOHSCROLL
     EDITTEXT        IDC_EDIT_D,46,92,40,12,ES_AUTOHSCROLL
     EDITTEXT        IDC_EDIT_MIN,46,123,40,12,ES_AUTOHSCROLL
@@ -68,12 +68,14 @@ BEGIN
     LTEXT           "年",IDC_STATIC,16,66,14,12
     LTEXT           "月",IDC_STATIC,16,79,17,12
     LTEXT           "日",IDC_STATIC,16,95,13,12
-    LTEXT           "時(UT)",IDC_STATIC,16,111,28,12
+    LTEXT           "時",IDC_STATIC,16,111,28,12
     LTEXT           "分",IDC_STATIC,16,124,14,12
     LTEXT           "秒",IDC_STATIC,16,140,18,12
-    DEFPUSHBUTTON   "アニメーション",ID_Anime,123,87,56,13
-    DEFPUSHBUTTON   "ストップ",ID_STOP,123,110,56,13
-    DEFPUSHBUTTON   "リアルタイム",ID_NOW,123,136,56,13
+    DEFPUSHBUTTON   "アニメ開始",ID_Anime,129,88,56,13
+    DEFPUSHBUTTON   "停止",ID_STOP,129,116,56,13
+    DEFPUSHBUTTON   "リアルタイム",ID_NOW,129,142,56,13
+    COMBOBOX        IDC_COMBO1,127,102,61,93,CBS_DROPDOWN | WS_VSCROLL | WS_TABSTOP
+    GROUPBOX        "協定世界時(UTC)",IDC_STATIC,10,50,88,107
 END
 
 
